Modify comments and gitignore
- Modify typing error on comments
- Add ignore case for intellij ide on gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -193,4 +193,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# IntelliJ
+*.idea/
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,vuejs,node
